--- a/𝒐𝒊𝒃𝒔𝒊𝒑_𝒕𝒂𝒔𝒌𝒏𝒐2/contact.html
+++ b/𝒐𝒊𝒃𝒔𝒊𝒑_𝒕𝒂𝒔𝒌𝒏𝒐2/contact.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Portfolio Website</title>
-	<link rel="stylesheet"  href="css/tstyle.css">
+	<link rel="stylesheet"  href="tstyle.css">
 	
 </head>
 <body>
