--- a/𝒐𝒊𝒃𝒔𝒊𝒑_𝒕𝒂𝒔𝒌𝒏𝒐2/trial.html
+++ b/𝒐𝒊𝒃𝒔𝒊𝒑_𝒕𝒂𝒔𝒌𝒏𝒐2/trial.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Portfolio Website</title>
-	<link rel="stylesheet"  href="css/tstyle.css">
+	<link rel="stylesheet"  href="tstyle.css">
 	
 </head>
 <body>
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div class="devPic">
-                <img src="images/dev.png" alt="Shruti">
+                <img src="dev.png" alt="Shruti">
             </div>
         </div>
     </div>
